--- a/Piolax-WebApp/appsettings.json
+++ b/Piolax-WebApp/appsettings.json
@@ -14,6 +14,7 @@
   "TokenExpirationMinutes": 10, // Tiempo de expiración en minutos
   "Jwt": {
     "Issuer": "https://localhost:7208/",
-    "Audience": "http://localhost:4200/"
+    "Audience": "https://localhost:4200/"
+    //"Audience": [ "http://localhost:4200/", "https://5105-200-188-149-29.ngrok-free.app" ]
   }
 }
