Actualiza configuraciones de Issuer y Audience en JSON
Se ha comentado la línea del "Issuer" para la URL pública anterior y se ha añadido un nuevo "Issuer" comentado para una URL pública diferente. También se ha comentado la línea del "Audience" para la URL pública anterior.

--- a/Piolax-WebApp/appsettings.json
+++ b/Piolax-WebApp/appsettings.json
@@ -19,7 +19,7 @@
     "Audience": "https://localhost:4200/"
 
     //Para pruebas con URL publica
-    //"Issuer": "https://piolax-backend.loca.lt/",
+    //"Issuer": "https://piolax-backend1.loca.lt/",
     //"Audience": " https://piolax-frontend.loca.lt/"
   }
 }
