Añadir métodos de gestión de mantenimientos y mejoras
Se ha añadido el método `ConsultarTodos` en el controlador `MantenimientoPreventivoController` para obtener todos los mantenimientos preventivos en formato DTO, con manejo de excepciones.

Se han implementado métodos para activar, desactivar, cambiar el estatus a "en proceso" y cancelar mantenimientos en proceso, todos con manejo de excepciones.

Se ha cambiado el nombre de la propiedad `Activo` a `activo` en varias clases DTO y en el modelo `MantenimientoPreventivo` para seguir una convención de nombres más consistente.

Se han actualizado el repositorio y los servicios para incluir la lógica relacionada con los mantenimientos asignados a empleados y su gestión.

Se han realizado cambios en la configuración de CORS y ajustes en la autenticación JWT para mejorar la seguridad y flexibilidad de la aplicación.

Finalmente, se han actualizado los archivos de configuración `launchSettings.json` y `appsettings.json` para reflejar las nuevas configuraciones de URL y autenticación.

--- a/Piolax-WebApp/Properties/launchSettings.json
+++ b/Piolax-WebApp/Properties/launchSettings.json
@@ -15,6 +15,10 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5265",
+
+      //CloudFlare
+      //"applicationUrl": "http://0.0.0.0:5265",
+
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -25,6 +29,10 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7208;http://localhost:5265",
+
+      //CloudFlare
+      //"applicationUrl": "https://0.0.0.0:7208;http://0.0.0.0:5265",
+
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
