--- a/Piolax-WebApp/Piolax-WebApp.csproj
+++ b/Piolax-WebApp/Piolax-WebApp.csproj
@@ -31,4 +31,11 @@
     <Folder Include="wwwroot\PDFs\Editados\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+
 </Project>
