--- a/Piolax-WebApp/appsettings.json
+++ b/Piolax-WebApp/appsettings.json
@@ -14,7 +14,7 @@
   "TokenExpirationMinutes": 10,
   "Jwt": {
 
-    "Issuer": "http://192.168.1.95:5003",
-    "Audience": "http://192.168.1.95:83"
+    "Issuer": "https://192.168.1.95:5444",
+    "Audience": "https://192.168.1.95"
   }
 }
