--- a/Piolax-WebApp/Piolax-WebApp.csproj
+++ b/Piolax-WebApp/Piolax-WebApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BarcodeLib" Version="3.1.4" />
+    <PackageReference Include="Cronos" Version="0.11.0" />
     <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="IronXL.Excel" Version="2024.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
