--- a/Piolax-WebApp/Piolax-WebApp.csproj
+++ b/Piolax-WebApp/Piolax-WebApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.0" />
     <PackageReference Include="BarcodeLib" Version="3.1.4" />
     <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="IronXL.Excel" Version="2024.12.1" />
